--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <body style="text-align:center; font-family:'Raleway">
     <h1 id="header" style="font-family:Raleway; font-size:50px">Js Calculator</h1>
-    <h4 style="margin-left:150px">-By Praneet Mehta</h4>
+    <h4 id="secondHeader" style="margin-left:150px">-By Praneet Mehta</h4>
     <div id="contain" class="container">
         <div id="display" style="text-align:right">
             <h2 id="line2">Line2</h2>
