--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
 
 <body style="text-align:center; font-family:'Raleway">
     <h1 id="header" style="font-family:Raleway; font-size:50px">Js Calculator</h1>
-    <h4 id="secondHeader" style="margin-left:150px">-By Praneet Mehta</h4>
+    <h4 id="secondHeader" style="margin-left:150px"> Praneet Mehta</h4>
     <div id="contain" class="container">
         <div id="display" style="text-align:right">
-            <h2 id="line2">Line2</h2>
-            <h2 id="lineOp">Operator Line</h2>
-            <h2 id="line1" style="margin-top:0px">Line 1</h2>
-            <h1 id="ansLine">Answer Line</h1>
+            <h2 id="line2"></h2>
+            <h2 id="lineOp"></h2>
+            <h2 id="line1" style="margin-top:0px"></h2>
+            <h1 id="ansLine"></h1>
 
         </div>
         <div id="operatorBtns">
