--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
     <h4 id="secondHeader" style="margin-left:150px"> Praneet Mehta</h4>
     <div id="contain" class="container">
         <div id="display" style="text-align:right">
-            <h2 id="line2"></h2>
-            <h2 id="lineOp"></h2>
-            <h2 id="line1" style="margin-top:0px"></h2>
-            <h1 id="ansLine"></h1>
+            <h2 id="line2">&nbsp;</h2>
+            <h2 id="lineOp">&nbsp;</h2>
+            <h2 id="line1" style="margin-top:0px">&nbsp;</h2>
+            <h1 id="ansLine">&nbsp;</h1>
 
         </div>
         <div id="operatorBtns">
