--- a/index.html
+++ b/index.html
@@ -52,11 +52,14 @@
         <div id="func">
             <div>
                 <button type="button" class="btn btn-lg func" onclick="clearAll()">C</button>
-                <button type="button" class="btn btn-lg func" onclick="addMem">M+</button>
+                <button type="button" class="btn btn-lg func" onclick="addMem()">M+</button>
                 <button type="button" class="btn btn-lg func" onclick="callMem()">MC</button>
                 <button type="button" class="btn btn-lg func" style="background:#4caf50" onclick="fetchAnswer()">=</button>
             </div>
         </div>
+    </div>
+    <div style="margin-top:50px" id="memoryInfo" class="container">
+
     </div>
     <script type="text/javascript" src="script.js"></script>
 </body>
