--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <button type="button" class="btn btn-lg num" onclick='addToArray(9)'>9</button>
                 <button type="button" class="btn btn-lg num" onclick='addToArray(.)'>.</button>
                 <button type="button" class="btn btn-lg num" onclick='addToArray(0)'>0</button>
-                <button type="button" class="btn btn-lg num" onclick='addToArray(00)'>00</button>
+                <button type="button" class="btn btn-lg num" onclick='addToArray(0),addToArray(0)'>00</button>
             </div>
         </div>
         <div id="func">
